--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_google_book">
    <application
-        android:label="flutter_google_book"
+        android:label="Google Books"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
